[package]
name = "finally-happy-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
fast_log = { version = "1.4.14", features = ["lz4"] }
log = "0.4.14"
rbatis = "3.0.29"
rbson = "2.0.3"
serde = "1.0.133"
serde_json = "1.0.74"
